--- a/angular.json
+++ b/angular.json
@@ -130,7 +130,9 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         },
         "e2e": {
@@ -176,7 +178,8 @@
     }
   },
   "cli": {
-    "defaultCollection": "@ionic/angular-toolkit"
+    "defaultCollection": "@ionic/angular-toolkit",
+    "analytics": "1a91fb09-4f71-42a5-b0b5-b49e3f000de1"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
