--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,8 @@
               },
               "src/assets/css/style.css",
               "src/assets/css/colors/orange.css",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
             ]
