--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
+    "@angular/localize": "~10.0.0",
     "@angular/material": "^10.2.2",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
@@ -27,6 +28,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "bootstrap": "^4.5.0",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "country-list": "^2.2.0",
     "ngx-toastr": "^13.0.0",
