--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/cdk": "^10.2.2",
     "@angular/common": "~10.0.0",
     "@angular/core": "~10.0.0",
+    "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.0.0",
     "@angular/localize": "~10.0.0",
     "@angular/material": "^10.2.2",
@@ -32,6 +33,7 @@
     "bootstrap": "^4.5.0",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "country-list": "^2.2.0",
+    "firebase": "^7.23.0",
     "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
